# medkit

./: .editorconfig  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yml  CONTRIBUTING.md  LICENSE  Makefile  README.md  environment.yml  poetry.toml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-issue.md  documentation_issue.yaml  feature_request.md  feature_request.yaml
.github/actions/prepare_poetry_env/: action.yml
.github/workflows/: github-actions.yml
.gitlab/issue_templates/: bug.md  documentation.md  feature_request.md
docs/: _config.yml  _toc.yml  environment.yml  index.md
docs/_templates/autosummary/: module.rst
docs/api/: audio.md  core.md  core_audio.md  core_text.md  io.md  text.md  tools.md  training.md
docs/api-gen/: index.md
docs/data/text/: 1.txt
docs/examples/: brat_io.md  cleaning_text.md  custom_text_operation.md  demo.md  detecting_text_duplicates.md  edsnlp.md  finetuning_hf_model.md  iamsystem.md  spacy_io.md  spans.md
docs/examples/text_segmentation/: index.md  section.md  syntagma.md
docs/user_guide/: first_steps.md  install.md  module.md  pipeline.md  provenance.md
examples/: spans.ipynb
examples/demo/: 1_basic.py  2_pipeline.py  3_doc_pipeline.py  4_provenance.py  5_provenance_sub_graphs.py
examples/demo/input/: 1.txt
medkit/: __init__.py
medkit/audio/: __init__.py
medkit/audio/preprocessing/: __init__.py  downmixer.py  power_normalizer.py  resampler.py
medkit/audio/segmentation/: __init__.py  pa_speaker_detector.py  webrtc_voice_detector.py
medkit/audio/transcription/: __init__.py  doc_transcriber.py  hf_transcriber.py  hf_transcriber_function.py  sb_transcriber.py  sb_transcriber_function.py  transcribed_document.py  transcribed_text_document.py
medkit/core/: __init__.py  _prov_graph.py  annotation.py  annotation_container.py  attribute.py  attribute_container.py  collection.py  conversion.py  data_item.py  dict_conv.py  dict_serialization.py  doc_pipeline.py  document.py  id.py  operation.py  operation_desc.py  pipeline.py  processing.py  prov_builder.py  prov_graph.py  prov_store.py  prov_tracer.py  store.py  trainable_operation.py  utils.py
medkit/core/audio/: __init__.py  annotation.py  annotation_container.py  audio_buffer.py  document.py  operation.py  span.py
medkit/core/text/: __init__.py  annotation.py  annotation_container.py  document.py  entity_attribute_container.py  entity_norm_attribute.py  normalization.py  operation.py  span.py  span_utils.py  umls_norm_attribute.py  utils.py
medkit/io/: __init__.py  _brat_utils.py  _common.py  _doccano_utils.py  brat.py  doccano.py  rttm.py  spacy.py  srt.py
medkit/io/medkit_json/: __init__.py  _common.py  audio.py  audio_reader.py  audio_writer.py  text.py  text_reader.py  text_writer.py
medkit/metrics/: __init__.py  irr.py  ner.py
medkit/text/: __init__.py  hf_translator.py  segmentation.py  translator.py
medkit/text/context/: __init__.py  _verb_list.py  family_detector.py  family_detector_default_rules.yml  hypothesis_detector.py  hypothesis_detector_default_verbs.yml  hypothesis_detector_example_rules.yml  hypothesis_detector_example_verbs.yml  negation_detector.py  negation_detector_default_rules.yml  text_classificator.py
medkit/text/metrics/: __init__.py  _common.py  classification.py  irr.py  irr_utils.py  ner.py
medkit/text/ner/: __init__.py  _base_simstring_matcher.py  adicap_norm_attribute.py  date_attribute.py  duckling_matcher.py  edsnlp_date_matcher.py  edsnlp_tnm_matcher.py  hf_entity_matcher.py  hf_entity_matcher_trainable.py  hf_tokenization_utils.py  iamsystem_matcher.py  list_regexp.json  normalization.py  quick_umls_matcher.py  regexp_matcher.py  regexp_matcher_default_rules.json  regexp_matcher_default_rules.yml  simstring_matcher.py  tnm_attribute.py  umls_coder_normalizer.py  umls_matcher.py  umls_norm_attribute.py  umls_normalization.py  umls_semgroups_v04.txt  umls_utils.py
medkit/text/postprocessing/: __init__.py  alignment_utils.py  attribute_duplicator.py  overlapping.py  propagator.py
medkit/text/preprocessing/: __init__.py  char_replacer.py  char_rules.py  duplicate_finder.py  eds_cleaner.py  endlines_cleaner.py  normalizer.py  regexp_replacer.py  unicode_normalizer.py
medkit/text/relations/: __init__.py  syntactic_extractor.py  syntactic_relation_extractor.py
medkit/text/segmentation/: __init__.py  default_section_definition.yml  default_section_dict.yml  default_syntagma_definition.yml  rush_sentence_tokenizer.py  rush_sentence_tokenizer_default_rules.tsv  section_tokenizer.py  sentence_tokenizer.py  syntagma_tokenizer.py  tokenizer_utils.py
medkit/text/spacy/: __init__.py  components.py  displacy_utils.py  doc_pipeline.py  edsnlp.py  pipeline.py  spacy_utils.py  subpipeline.py
medkit/text/translation/: __init__.py  hf_translator.py
medkit/text/utils/: __init__.py  decoding.py
medkit/tools/: __init__.py  _save_prov_to_dot.py  e3c_corpus.py  hf_utils.py  mtsamples.py  save_prov_to_dot.py
medkit/training/: __init__.py  callbacks.py  train_config.py  trainable_component.py  trainable_operation.py  trainer.py  trainer_config.py  utils.py  utils_tokenization_HF.py
tests/: audio_utils.py  conftest.py  data_utils.py
tests/core/: test_doc_pipeline.py  test_pipeline.py  test_prov_builder.py  test_prov_graph.py
tests/core/pipeline/: test_pipeline.py  test_pipeline_with_prov.py
tests/core/prov_builder/: _common.py  test_prov_builder.py  (+1 more)
tests/data/text/: doc1.txt  (+2 more)
tests/io/: test__brat.py  test__brat_utils.py  test_brat.py  test_spacy_input_converted.py  test_spacy_input_converter.py  test_spacy_output_converted.py
tests/large/: test_hf_entity_matcher.py  test_hf_transcriber.py  test_hf_transcriber_function.py  test_mtsamples.py  test_pa_speaker_detector.py  test_sb_transcriber.py  test_sb_transcriber_function.py
tests/large_data/: README.md
tests/text/: test_hf_translator.py  test_regexp_matcher.py  test_section_tokenizer.py  test_segmentation.py  test_translator.py
tests/tools/: test_save_prov_to_dot.py
(+215 files in other folders)
