[tool.poetry]
name = "medkit"
version = "0.1.0"
description = "A Python library for a learning health system"
readme = "README.md"
repository = "https://gitlab.inria.fr/heka/medkit/"
documentation = "https://heka.gitlabpages.inria.fr/medkit/"
authors = ["HeKA Research Team"]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Medical Science Apps."
]

[tool.poetry.dependencies]
python = ">=3.7.1, <4.0"
flashtext = "*"
numpy = "*"
pyaml = "*"
requests = "*"
smart-open = "*"
soundfile = "*"
tqdm = "*"
typing-extensions = "*"
Unidecode = "*"

# optional
feather-format = {version = "^0.4", optional = true}
packaging = {version = "*", optional = true}
pandas = [
    {version = "~1.3", python = ">=3.7.1, <3.8", optional = true},
    {version = "^1.4", python = ">=3.8, <4.0", optional = true},
]
PyRuSH = {version = "^1.0", optional = true}
quickumls = {version = "^1.4", optional = true}
resampy = {version = "^0.4", optional = true}
sacremoses = {version = "*", optional = true}
sentencepiece = {version = "*", optional = true}
spacy = {version = "^3.4", optional = true}
torch = {version ="^1.0", optional = true}
torchaudio = {version ="^0.12", optional = true}
transformers = {version = "^4.21", optional = true}
webrtcvad = {version = "^2.0", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
pytest-mock = "*"
pre-commit = "*"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
jupyter-book = "^0.13"
matplotlib = "*"
spacy = "^3.4"
sphinx = ">=4.3.3"
sphinxcontrib-mermaid = "*"
sphinx-toolbox = "*"

[tool.poetry.extras]

hf-entity-matcher = [
    "torch",
    "transformers",
]
hf-transcriber = [
    "torchaudio",
    "transformers"
]
hf-translator = [
    "sacremoses",  # needed by default model "Helsinki-NLP/opus-mt-fr-en"
    "sentencepiece",
    "torch",
    "transformers"
]
quick-umls = [
    "packaging",  # needed to check quickumls version
    "quickumls",
]
resampler = ["resampy"]
rush-sentence-tokenizer = ["PyRush"]
spacy = ["spacy"]
umls-coder-normalizer = [
    "feather-format",
    "pandas",
    "torch",
    "transformers",
]
webrtc-voice-detector = ["webrtcvad"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
preview = true
extend-exclude = ".venv"
