[metadata]
name = MedKit
author = HeKA Research Team
description = A Python library for a learning health system
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.inria.fr/heka/medkit/
licence = MIT
licence_files = file: LICENCE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
setup_requires = setuptools_scm[toml]>=6.2
install_requires =
    flashtext
    pyaml
    smart_open
    Unidecode

[options.extras_require]
optional =
    PyRush
    quickumls
    six
dev =
    black
    flake8
    pytest
    pytest-cov
all =
    MedKit[dev]
    MedKit[optional]

[options.packages.find]
include =
    medkit
    medkit.*

[options.package_data]
* = *.yml, *.tsv

[flake8]
max-line-length = 88
select = C,E,F,W,B,B950
extend-ignore = E203,E501,W503
exclude =
    .env,
    .git,
    __pycache__